{
    "name": "UserControls",
    "maps": [
        {
            "name": "Controls",
            "id": "fd232599-ed46-4b48-9e35-daf176d8c166",
            "actions": [
                {
                    "name": "Activate",
                    "type": "Button",
                    "id": "c24a6227-7465-4e4d-af2b-20de1c12bfa3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DirectionUp",
                    "type": "Button",
                    "id": "d9387995-7a24-4c39-8de5-6923d9c34138",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DirectionLeft",
                    "type": "Button",
                    "id": "c0000c25-6c07-4ba9-9af4-ab24388ea5d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DirectionDown",
                    "type": "Button",
                    "id": "42a6fd3c-f40d-42e2-8337-ebb749afe551",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DirectionRight",
                    "type": "Button",
                    "id": "f9ec6a13-9665-4838-8b35-0080a114736d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "e5ff9bd2-e834-4915-ac51-3d29babe597f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef038401-11ed-4ec2-8582-86420ed61ef6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Activate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa013d67-19c4-4e97-a543-26403da623eb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13f6013e-39d2-48f4-b691-181505b0d3c8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99d72034-bb0b-4c22-b713-3a034df49c18",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6f6775e-5424-4f63-92ab-4f1b6a64941f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74f6409b-8117-464d-8da5-cb7beb4abae3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}